First  portfolio commit

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="shortcut icon" type="image/png" href="/src/assets/favicon.png" />
+    <link rel="shortcut icon" type="image/png" href="/assets/favicon.png" />
 
     <title>De Prof&trade; | Fullstack Software Developer</title>
     <meta name="javascript De Prof, AbdulSalam AbdulRahman, Developer" />
@@ -15,7 +15,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <link rel="stylesheet" href="/src/sass/styles.css" />
+    <link rel="stylesheet" href="/sass/styles.css" />
     <script
       defer
       src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"
@@ -26,7 +26,7 @@
     <div id="top"></div>
     <div class="header__logo-box">
       <a href="https://github.com/DeProf-tech" target="_blank" rel="noopener">
-        <img src="/src/assets/favicon.png" alt="Logo" class="header__logo" />
+        <img src="/assets/favicon.png" alt="Logo" class="header__logo" />
       </a>
     </div>
 
@@ -97,7 +97,7 @@
                 class="img-fluid rounded shadow-lg"
                 height="auto"
                 width="300px"
-                src="/src/assets/portfile.jpg"
+                src="/assets/portfile.jpg"
                 alt="Profile Image"
               />
             </div>
@@ -122,7 +122,7 @@
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn cta-btn--resume"
-                  href="/src/assets/resume.pdf"
+                  href="/assets/resume.pdf"
                 >
                   Give Rahman's Resum&eacute; a look
                 </a>
@@ -186,7 +186,7 @@
                     <img
                       alt="Project Image"
                       class="img-fluid"
-                      src="/src/assets/img/omnifood-project.png"
+                      src="/assets/img/omnifood-project.png"
                     />
                   </div>
                 </a>
@@ -241,7 +241,7 @@
                     <img
                       alt="Project Image"
                       class="img-fluid"
-                      src="/src/assets/img/guess-number.png"
+                      src="/assets/img/guess-number.png"
                     />
                   </div>
                 </a>
@@ -318,7 +318,7 @@
       </div>
     </footer>
     <!-- /END Footer Section -->
-    <script src="/node_modules/bootstrap/dist/js/bootstrap.js"></script>
+    <!-- <script src="/node_modules/bootstrap/dist/js/bootstrap.js"></script> -->
     <script defer type="module" src="index.js"></script>
   </body>
 </html>
