--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
             rel="noreferrer"
             target="_blank"
             class="cta-btn cta-btn--resume"
-            href="abdulrahmanabdulsalam93mail.com"
+            href="mailto:abdulrahmanabdulsalam93mail.com"
             >Go to mail</a
           >
         </div>
