--- a/index.html
+++ b/index.html
@@ -204,9 +204,7 @@
                 </h3>
                 <div>
                   <p class="mb-4">
-                    This game was definitely an inspiration by Jonas Schmedtmann
-                    again! I decided to recreate it during my learning with his
-                    tutorial and there are plans to make it playable on mobile
+                    This game should be played by two players. Requires being smart, beating your urge and requires your ability to control yourself. Just don't pick a "1". There are plans to make it playable on mobile
                     devices soon
                   </p>
                 </div>
